--- a/compiler/rustc_transmute/Cargo.toml
+++ b/compiler/rustc_transmute/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "rustc_trait_selection"
-version = "0.0.0"
+name = "rustc_transmute"
+version = "0.1.0"
 edition = "2021"
 
-[lib]
-doctest = false
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 rustc_parse_format = { path = "../rustc_parse_format" }
@@ -17,11 +16,8 @@ rustc_errors = { path = "../rustc_errors" }
 rustc_hir = { path = "../rustc_hir" }
 rustc_index = { path = "../rustc_index" }
 rustc_infer = { path = "../rustc_infer" }
-rustc_lint_defs = { path = "../rustc_lint_defs" }
 rustc_macros = { path = "../rustc_macros" }
-rustc_query_system = { path = "../rustc_query_system" }
 rustc_session = { path = "../rustc_session" }
 rustc_span = { path = "../rustc_span" }
 rustc_target = { path = "../rustc_target" }
-rustc_transmute = { path = "../rustc_transmute" }
 smallvec = { version = "1.6.1", features = ["union", "may_dangle"] }
